--- a/appproject/accounts/templates/system/index.html
+++ b/appproject/accounts/templates/system/index.html
@@ -31,3 +31,7 @@
 console.log('システム編集画面を読み込みました');
 </script>
 {% endblock %}
+
+{% block ai_chat_widget %}
+  {% include 'includes/ai_chat_base.html' %}
+{% endblock %}
