--- a/appproject/accounts/templates/system/system_choice.html
+++ b/appproject/accounts/templates/system/system_choice.html
@@ -403,6 +403,11 @@
       });
     }
   </script>
+{% endblock %}
+
+{% block ai_chat_widget %}
+  {% include 'includes/ai_chat_base.html' %}
+{% endblock %}
 </body>
 {% endblock %}
 </html>
