--- a/appproject/accounts/templates/system/system_tutorial.html
+++ b/appproject/accounts/templates/system/system_tutorial.html
@@ -573,7 +573,7 @@
       height: 48px;
       display:flex;
       align-items:center;
-      justify-content:flex-end;
+      justify-content:flex-start;
       gap:8px;
       z-index: 10010;
     }
